Fixed overflow of text in dataset header text

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,7 @@ body{
   padding: 0 0 0 40px;
 }
 .custom-header-fixed2{
-  padding:15px 0 0 120px;
+  padding:15px 30px 0 90px;
   color:white;
   z-index:99999 !important;
 }
